# PatentForge

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  程序员Agent.md  软著审核员Agent.md
agent/: orchestrator.md  programmer.md  reviewer.md
docs/: opencode-project-agents-guide.md  patentforge-agent-architecture.md
patentforge/: __init__.py  cli.py
patentforge/agents/: __init__.py  base.py  reviewer_agent.py  writer_agent.py
patentforge/core/: __init__.py  controller.py  loop_engine.py  state.py
patentforge/llm/: __init__.py  client.py  fallback_codegen.py
patentforge/utils/: __init__.py  code_style.py  env_loader.py  logging_setup.py  prompt_loader.py
test_cases/: orchestrator_verify.md  sheji.md
游戏跨平台运行适配管理系统/: 审核结果.md  源代码.ts
