[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patentforge"
version = "0.1.0"
description = "Dual-agent loop for PatentForge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]

[project.scripts]
patentforge = "patentforge.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["patentforge*"]
